# 2022_2_oldB

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  justfile  main.cpp
.github/workflows/: ci.yml  ci_push.yml  pull_request.yml
Client/Client/: CMakeLists.txt  ChatClient.h  Client.cpp  Client.h  Client.pro  Message.h  chat_message.hpp  client.cpp  client.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  ui.pro
Client/Client/src/: KeyboardResponsiveTextEdit.cpp  KeyboardResponsiveTextEdit.h  PushButtonHover.cpp  PushButtonHover.h  mainwindow.cpp  mainwindow.ui  resources.qrc  src.pro
DataAccess/: Converter.h  DAFacade.h  DBConnection.h  IRepository.h  a.out  main.cpp
DataAccess/Entities/: ChatMessage.h  Message.h  Room.h  User.h
DataAccess/EntityStructures/: Role.h  Users.h
DataAccess/PSQL/: PSQLMessageRepository.h  PSQLRoomRepository.h  PSQLUserRepository.h
DataAccess/PSQLRepository/: PSQLRepositoryUser.h
DataAccess/docs/: README.md
DataAccess/fillDB/: gen.py  messages.csv  query.sql  rooms.csv  user_rooms.csv  users.csv
DataAccess/tests/: UserRepositoryTests.cpp
Server/Server/: CMakeLists.txt  Server.pro  main.cpp
data_access/EntityStructures/: Message.h
data_access/PSQLRepository/: PSQLRepositoryUser.h
docs/: README.md
server/: CMakeLists.txt
server/include/: server.h
server/src/: server.cpp
server/tests/: CMakeLists.txt  server_test.cpp
src/: add_one.cpp  add_one.h  main.cpp
test/: CMakeLists.txt  test_add_one.cpp
ui/: mainwindow.h  mainwindow.ui
